# market-analysis-system

./: .gitignore  README.md  data_loader.py  features.py  main.py  model.py  pattern_detector.py  pyproject.toml  requirements.txt
data/: tase_securities.example.csv
stock_pattern_model/: __init__.py  __main__.py  analysis.py  cli.py  config.py  context.py  data_loader.py  datetime_utils.py  domain.py  evaluation.py  exceptions.py  features.py  formatters.py  market_data.py  pattern_detector.py  resolver.py  scoring.py  session_utils.py
tests/: test_cli.py  test_historical_evaluation.py  test_market_data.py  test_model.py  test_pattern_lifecycle.py  test_pattern_registry.py  test_performance_regression.py  test_scoring.py  test_timezone_and_trend.py
tests/fixtures/: sample_ohlcv.csv
